--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <script src="script.js"></script>
 </head>
 <body>
-    
+    <!-- <img src="./assets/images/background.jpeg" alt="Background"> -->
+    <div class="container">
+        <div class="box-grid">
+            <div class="box box-1"></div>
+            <div class="box box-2"></div>
+            <div class="box box-3"></div>
+            <div class="box box-4"></div>
+            <div class="box box-5"></div>
+            <div class="box box-6"></div>
+            <div class="box box-7"></div>
+            <div class="box box-8"></div>
+            <div class="box box-9"></div>
+        </div>
+    </div>
 </body>
 </html>
