tic tac toe layout created

--- a/index.html
+++ b/index.html
@@ -10,16 +10,38 @@
 <body>
     <!-- <img src="./assets/images/background.jpeg" alt="Background"> -->
     <div class="container">
+        <header class="title-bar">
+            <p class="title-bar-heading">Tic Tac Toe</p>
+        </header>
         <div class="box-grid">
-            <div class="box box-1"></div>
-            <div class="box box-2"></div>
-            <div class="box box-3"></div>
-            <div class="box box-4"></div>
-            <div class="box box-5"></div>
-            <div class="box box-6"></div>
-            <div class="box box-7"></div>
-            <div class="box box-8"></div>
-            <div class="box box-9"></div>
+            <!-- Inset span inside div items-->
+            <div class="box box-1">
+
+            </div>
+            <div class="box box-2">
+
+            </div>
+            <div class="box box-3">
+
+            </div>
+            <div class="box box-4">
+
+            </div>
+            <div class="box box-5">
+
+            </div>
+            <div class="box box-6">
+
+            </div>
+            <div class="box box-7">
+
+            </div>
+            <div class="box box-8">
+
+            </div>
+            <div class="box box-9">
+
+            </div>
         </div>
     </div>
 </body>
