--- a/index.html
+++ b/index.html
@@ -16,31 +16,31 @@
         <div class="box-grid">
             <!-- Inset span inside div items-->
             <div class="box box-1">
-
+                <span class="player-click"></span>
             </div>
             <div class="box box-2">
-
+                <span class="player-click"></span>
             </div>
             <div class="box box-3">
-
+                <span class="player-click"></span>
             </div>
             <div class="box box-4">
-
+                <span class="player-click"></span>
             </div>
             <div class="box box-5">
-
+                <span class="player-click"></span>
             </div>
             <div class="box box-6">
-
+                <span class="player-click"></span>
             </div>
             <div class="box box-7">
-
+                <span class="player-click"></span>
             </div>
             <div class="box box-8">
-
+                <span class="player-click"></span>
             </div>
             <div class="box box-9">
-
+                <span class="player-click"></span>
             </div>
         </div>
     </div>
